# misis2023f-22-01-kanevskiy-d-e

./: CMakeLists.txt  README.md  build-install.bat  build-install.sh  codeforces.id  status.md
docs/: CMakePresets_example.json  report.md
prj.codeforces/: 0005a.cpp  0131a.cpp  0269b.cpp  0339b.cpp  0552b.cpp  0608a.cpp  1352c.cpp  1374.cpp  1407a.cpp  1857a.cpp  1857b.cpp  1862c.cpp  1879c.cpp  1883b.cpp  1915a.cpp  1915b.cpp  1915c.cpp  1915d.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  Doxyfile
prj.cw/doc/html/: annotated.html  annotated_dup.js  class_transformation_manager-members.html  class_transformation_manager.html  class_transformation_manager.js  classes.html  dir_1056c373aaff6b16b939413fa3f37542.html  dir_1056c373aaff6b16b939413fa3f37542.js  dir_458a841315d3b817a667e38ea7412dda.html  dir_5fc386f126b49c0d1b6d325450a6ff83.html  dir_5fc386f126b49c0d1b6d325450a6ff83.js  dir_c76339699a038828a9df7f95bf4c6ff1.html  dir_c76339699a038828a9df7f95bf4c6ff1.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_func.html  index.html  navtreedata.js  navtreeindex0.js  volren_8hpp.html  volren_8hpp.js  volren_8hpp_source.html
prj.cw/doc/html/search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  classes_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
prj.cw/doc/latex/: annotated.tex  class_transformation_manager.tex  files.tex  refman.tex  volren_8hpp.tex  volren_8hpp_source.tex
prj.cw/test_app/: CMakeLists.txt  test_app.cpp
prj.cw/volren/: CMakeLists.txt  volren.cpp
prj.cw/volren/include/volren/: volren.hpp
