add_executable(1374c "1374c.cpp")
add_executable(0131a "0131a.cpp")
add_executable(1352c "1352c.cpp")
add_executable(1407a "1407a.cpp")
add_executable(1883b "1883b.cpp")
add_executable(1879c "1879c.cpp")
add_executable(0005a "0005a.cpp")
add_executable(0608a "0608a.cpp")
add_executable(0269b "0269b.cpp")
add_executable(0552b "0552b.cpp")
add_executable(0339b "0339b.cpp")
add_executable(1862c "1862c.cpp")